<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blackBoardClr"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lecPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <Button
            android:id="@+id/eraseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/erase" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/showLecTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" >

        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/lecName"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/dbLecName"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:text="@string/teacherName"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/dbTeacherName"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:gravity="center"
                android:text="@string/place"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/dbPlace"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/memo"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/showLecMemo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dateDialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeLimit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/colon"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/showTimeLimit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <Button
            android:id="@+id/memoSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save" />
    </LinearLayout>

    <TextView
        android:id="@+id/showLecMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"
        android:textColor="@color/white"
        android:textSize="12dp" />

    <ListView
        android:id="@+id/memoList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

</LinearLayout>